Variable bug fixed
- This cropped up when i switched from scss variables to CSS variables,
  and i forgot to completely switch everything in all of my sass files

--- a/universalCSS/styling.css
+++ b/universalCSS/styling.css
@@ -26,6 +26,8 @@
   --Roboto: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol";
+  --themeBGColor1: var(--darkGrey1);
+  --themeBGColor2: var(--darkGrey2);
 }
 
 .greenText {
@@ -143,18 +145,17 @@ header {
 .mainSection {
   grid-area: main-section;
   padding: 0.5rem 0;
-  grid-template-areas: "left-col right-col";
 }
-.mainSection--left-col, .mainSection--right-col {
+.mainSection--left-wide, .mainSection--right-wide {
   display: grid;
 }
-.mainSection--left-col {
-  grid-template-columns: 20% auto;
-  grid-area: left-col;
-}
-.mainSection--right-col {
+.mainSection--left-wide {
   grid-template-columns: auto 20%;
-  grid-area: right-col;
+  grid-template-area: "sidebar main";
+}
+.mainSection--right-wide {
+  grid-template-columns: 20% auto;
+  grid-template-area: "main sidebar";
 }
 
 .nav-themed {
@@ -316,16 +317,11 @@ header {
 
 .darkBG {
   color: var(--white);
-  background-color: var(--darkGrey1);
+  background-color: var(--themeBGColor1);
 }
 .darkBG a:hover {
   background-color: inherit;
   color: var(--lightgrey);
-}
-
-/* THEME RELATED */
-.darkGreyText {
-  color: var(--darkGrey1);
 }
 
 .frontpage-section {
@@ -464,15 +460,9 @@ dl li {
 }
 
 code {
-  background-color: var(--darkGrey1);
+  background-color: var(--themeBGColor1);
   color: var(--white);
   display: inline-block;
-}
-
-.coverImage2 {
-  width: 100%;
-  height: 500px;
-  object-fit: cover;
 }
 
 .hiddenAccessLinkText {
